--- a/index.html
+++ b/index.html
@@ -98,11 +98,14 @@
         <div class="top-bar">
           <div class="search-box">
             <span class="material-symbols-outlined">search</span>
-            <input type="text" placeholder="Search tickets..." />
+            <input type="search" placeholder="Search tickets..." />
           </div>
 
-          <div class="notification">
-            <span class="material-symbols-outlined">notifications_unread</span>
+          <div class="notification-and-menu">
+            <span class="material-symbols-outlined notification"
+              >notifications_unread</span
+            >
+            <span class="material-symbols-outlined menu">menu</span>
           </div>
         </div>
 
